--- a/proyecto-fin-grado/src/main/resources/templates/actualizar_paciente.html
+++ b/proyecto-fin-grado/src/main/resources/templates/actualizar_paciente.html
@@ -101,7 +101,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-primary" type="submit">Enviar</button>
+        <button class="btn btn-primary" type="submit">Actualizar</button>
       </form>
     </div>
   </div>
