--- a/proyecto-fin-grado/src/main/resources/templates/expediente_crear.html
+++ b/proyecto-fin-grado/src/main/resources/templates/expediente_crear.html
@@ -40,7 +40,7 @@
                             <label class="form-label">Paciente</label>
                             <input class="form-control" type="text" th:value="${expediente.paciente.nombre}" readonly/>
                         </div>
-                        <!-- Utilizando Select2 para el campo de enfermedad -->
+                        <!-- Lista de enfermedades disponibles en BD -->
                         <div class="form-group mb-3">
                             <label class="form-label">Enfermedad</label>
                             <select class="form-control select2" th:field="*{enfermedad.nombre}">
@@ -50,7 +50,7 @@
                                 </option>
                             </select>
                         </div>
-                        <!-- Utilizando Datepicker para el campo de fechaInicioSintomas -->
+                        <!-- Datepicker para obtener fechaInicioSintomas -->
                         <div class="form-group mb-3">
                             <label class="form-label">Fecha de Inicio de Síntomas</label>
                             <input class="form-control" type="text" id="fechaInicioSintomas" name="fechaInicioSintomas" th:value="${#dates.format(expediente.fechaInicioSintomas, 'dd-MM-yyyy')}" />
