--- a/proyecto-fin-grado/src/main/resources/templates/expediente_crear.html
+++ b/proyecto-fin-grado/src/main/resources/templates/expediente_crear.html
@@ -56,7 +56,12 @@
                             <input class="form-control" type="text" id="fechaInicioSintomas" name="fechaInicioSintomas" th:value="${#dates.format(expediente.fechaInicioSintomas, 'dd-MM-yyyy')}" />
                         </div>
 
-                        <p>Ayúdanos a mejorar los datos aportando los tuyos:</p>
+                        <h4>Ayúdanos a mejorar los datos aportando los tuyos:</h4>
+                        <p>Acepto que los datos de mi enfermedad se usen para estudio:</p>
+
+                        <label for="aceptadoPaciente">Aceptar Paciente:</label>
+                        <input type="checkbox" id="aceptadoPaciente" onchange="cambiarEstadoAceptadoPaciente(this)">
+
                         <label for="diasIncubacion">Días desde el primer contacto hasta primer día de síntomas:</label>
                         <input type="number" id="diasIncubacion" name="diasIncubacion" maxlength="8"><br><br>
 
@@ -65,6 +70,7 @@
 
                         <label for="diasTotales">Días Totales:</label>
                         <input type="number" id="diasTotales" name="diasTotales" maxlength="8"><br><br>
+
 
 
                         <button class="btn btn-primary" type="submit">Guardar</button>
@@ -82,6 +88,17 @@
 
 <!-- Inicializar Select2 y Datepicker -->
 <script th:inline="javascript">
+<script th:inline="javascript">
+    // Define la variable expediente y establece su propiedad aceptadoPaciente
+    var expediente = {
+        aceptadoPaciente: false // Por defecto, establecido en false
+    };
+
+    // Función para cambiar el estado de aceptadoPaciente
+    function cambiarEstadoAceptadoPaciente(checkbox) {
+        expediente.aceptadoPaciente = checkbox.checked;
+    }
+
     $(document).ready(function() {
         // Inicializar Select2
         $('.select2').select2({
@@ -97,6 +114,9 @@
         });
     });
 </script>
+</script>
+
+
 
 </body>
 </html>
