--- a/proyecto-fin-grado/src/main/resources/templates/ver_paciente.html
+++ b/proyecto-fin-grado/src/main/resources/templates/ver_paciente.html
@@ -38,9 +38,10 @@
     <div class="col-md-5">
       <div class="card">
         <div class="card-header">
-          <h2 class="text-center ">Información:  <a class="btn btn-primary"
-                                                    th:href="@{/pacientes/{idPaciente}/actualizar(idPaciente=${paciente.id})}">Actualizar
-            Informacion</a></h2>
+          <h2 class="text-center ">Información:
+            <a class="btn btn-primary" th:href="@{/pacientes/{idPaciente}/actualizar(idPaciente=${paciente.id})}">Actualizar
+            Informacion</a>
+          </h2>
         </div>
         <div class="card-body">
           <p> Nombre: <strong th:text="${paciente.nombre}"></strong></p>
@@ -56,7 +57,10 @@
     <div class="col-md-5 " >
       <div class="card">
         <div class="card-header">
-          <h2 class="text-center">Mi Historial de Enfermedades</h2>
+          <h2 class="text-center">Mi Historial de Enfermedades
+            <a class="btn btn-primary" th:href="@{/expedientes/crear/{idPaciente}(idPaciente=${paciente.id})}">Añadir Enfermedad
+              </a></h2>
+          </h2>
         </div>
         <div class="card-body overflow-auto" style="max-height: 300px;">
           <ul class="list-group">
