FUNCIONA: añadido crear expediente a perfil de pacientes, falta poner estado seird

--- a/proyecto-fin-grado/src/main/resources/templates/expediente_crear.html
+++ b/proyecto-fin-grado/src/main/resources/templates/expediente_crear.html
@@ -68,7 +68,8 @@
 
                         <br>
 
-                        <h4>Ayúdanos a mejorar la aplicacion aportando los datos de tu enfermedad. Tus datos personales no se compartirán, solo los días que ha durado la enfermedad</h4>
+                        <h4>Ayúdanos a mejorar la aplicacion aportando los datos de tu enfermedad. </h4>
+                         <h6> Tus datos personales no se compartirán, solo los días que ha durado la enfermedad.</h6>
                         <label for="aceptadoPaciente">Consiento que los datos de mi enfermedad se usen para estudio:</label>
                         <input type="checkbox" id="aceptadoPaciente" name="aceptadoPaciente" value="true">
                         <br>
