--- a/proyecto-fin-grado/src/main/resources/templates/login.html
+++ b/proyecto-fin-grado/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
+        <a class="navbar-brand" th:href="@{/index}">Sistema de Registro de la Aplicación Sanitaria</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
                                     id="username"
                                     name="username"
                                     class="form-control"
-                                    placeholder="Enter email address"
+                                    placeholder="email"
                             />
                         </div>
 
@@ -69,7 +69,7 @@
                                     id="password"
                                     name="password"
                                     class="form-control"
-                                    placeholder="Enter password"
+                                    placeholder="contraseña"
                             />
                         </div>
                         <div class="form-group mb-3">
