--- a/proyecto-fin-grado/src/main/resources/templates/menu.html
+++ b/proyecto-fin-grado/src/main/resources/templates/menu.html
@@ -68,13 +68,13 @@
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a th:href="@{/calendar}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="imagen2.jpg" alt="Imagen 2">
+                <img src="https://images.emojiterra.com/google/android-12l/512px/1f5d3.png" alt="Imagen 2">
             </a>
             <div class="menu-text">Calendario</div>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a th:href="@{/pacientes/crear}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="imagen3.jpg" alt="Imagen 3">
+                <img src="https://cdn-icons-png.flaticon.com/512/3096/3096653.png" alt="Imagen 3">
             </a>
             <div class="menu-text">Crear paciente </div>
         </div>
@@ -88,7 +88,7 @@
             <a th:href="@{/pacientes}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
                 <img src="../static/imagen4.png" alt="Imagen 4">
             </a>
-            <div class="menu-text">Lista de pacientes</div>
+            <div class="menu-text">POR DEFINIR</div>
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">   <!-- Está puesto un "1" de prueba para mi perfil cambiar esto por id del usuario relacionado con el paciente -->
             <a th:href="@{/pacientes/1/ver}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
@@ -104,7 +104,7 @@
         </div>
         <div class="col-lg-2 col-md-4 col-sm-6">
             <a th:href="@{/enfermedades}" class="menu-button bg-white text-dark d-flex justify-content-center align-items-center">
-                <img src="" alt="Imagen 6">
+                <img src="https://cdn.pixabay.com/photo/2020/04/24/11/44/coronavirus-5086544_1280.png" alt="Imagen 6">
             </a>
             <div class="menu-text">Glosario de Enfermedades</div>
         </div>
