--- a/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
+++ b/proyecto-fin-grado/src/main/resources/templates/crear_paciente.html
@@ -41,13 +41,13 @@
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label class="form-label">Nombre del Paciente</label>
+              <label class="form-label">Nombre</label>
               <input class="form-control" id="nombre" name="nombre" placeholder="Nombre" type="text" th:field="*{nombre}" />
               <p th:if="${#fields.hasErrors('nombre')}" class="text-danger" th:errors="*{nombre}"></p>
             </div>
 
             <div class="form-group mb-3">
-              <label class="form-label">Apellidos del Paciente</label>
+              <label class="form-label">Apellidos</label>
               <input class="form-control" id="apellidos" name="apellidos" placeholder="Apellidos" type="text" th:field="*{apellidos}" />
               <p th:if="${#fields.hasErrors('apellidos')}" class="text-danger" th:errors="*{apellidos}"></p>
             </div>
@@ -57,14 +57,7 @@
               <input class="form-control" id="edad" name="edad" placeholder="Edad" type="number" th:field="*{edad}" />
               <p th:if="${#fields.hasErrors('edad')}" class="text-danger" th:errors="*{edad}"></p>
             </div>
-            <!-- Noo poner fechas hasta que haga el transformer y mapper como dios manda
-            <div class="form-group mb-3">
-              <label class="form-label">Fecha de Nacimiento</label>
-              <input class="form-control" id="fechaNacimiento" name="fechaNacimiento" placeholder="Fecha de Nacimiento" type="date" th:field="*{fechaNacimiento}" />
-              <p th:if="${#fields.hasErrors('fechaNacimiento')}" class="text-danger" th:errors="*{fechaNacimiento}"></p>
-            </div>
           </div>
-          -->
 
           <div class="col">
             <div class="form-group mb-3">
